# era5-movies

./: .gitignore  README.md  environment.yml  plot_ecco_data.py  plot_era5_data.py  plot_ghrsst_data.py  plot_oscar_data.py  process_era5_nc_files.py  pyproject.toml  request_era5.py  request_era5_data.py
